[package]
name = "relay-delivery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relay-core = { path = "../relay-core" }
tokio = { workspace = true }
rdkafka = { workspace = true }
diesel = { workspace = true, features = ["postgres", "chrono", "serde_json"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool", "async-connection-wrapper"] }
a2 = "0.5"
fcm = "0.9"
reqwest = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

